--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "node app.js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "baidu-aip-sdk": "^4.15.4",
     "fs-extra": "^10.0.0",
+    "javascript-state-machine": "^3.1.0",
     "megalodon": "^3.6.7",
     "mongoose": "^6.0.12"
   },
