--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "fs-extra": "^10.0.0",
     "javascript-state-machine": "^3.1.0",
     "megalodon": "^3.6.7",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "parse-domain": "^4.1.0"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
