--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "baidu-aip-sdk": "^4.15.4",
+    "cheerio": "^1.0.0-rc.10",
     "fs-extra": "^10.0.0",
     "javascript-state-machine": "^3.1.0",
     "megalodon": "^3.6.7",
