--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - mongodb
     networks:
       - yocat2
+      - yocat2-yolo-api_yocat2
 
   mongodb:
     container_name: yocat2-mongodb
@@ -26,4 +27,6 @@ services:
       MONGO_INITDB_DATABASE: ${CI_MONGO_INITDB_DATABASE}
 
 networks:
+  yocat2-yolo-api_yocat2:
+    external: true
   yocat2:
