feat: write files to a shared directory so yolo api can pick up the media

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: yocat2-server
     build: .
     restart: unless-stopped
+    volumes:
+      - /yocat2/img_cache:/img_cache
     depends_on:
       - mongodb
     networks:
