--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - deploy
 
 before_script:
-  - apk add rsync openssh
+  - apk add rsync openssh curl
   - echo $CI_CONFIG_JS > ${CI_PROJECT_DIR}/config.js
   - mkdir ${CI_PROJECT_DIR}/scripts
   - echo $CI_MONGO_SCRIPTS > ${CI_PROJECT_DIR}/scripts/mongodb-create-user-roles.js
@@ -23,3 +23,4 @@ deploy:
     # -I, --ignore-times don't skip files that match size and time
     - rsync -avI --exclude='.git/' --progress ./ $CI_REMOTE_USERNAME@$CI_REMOTE_HOST:$CI_REMOTE_PATH
     - ssh $CI_REMOTE_USERNAME@$CI_REMOTE_HOST "CI_MONGO_INITDB_ROOT_USERNAME=$CI_MONGO_INITDB_ROOT_USERNAME CI_MONGO_INITDB_ROOT_PASSWORD=$CI_MONGO_INITDB_ROOT_PASSWORD CI_MONGO_INITDB_DATABASE=$CI_MONGO_INITDB_DATABASE cd $CI_REMOTE_PATH && sudo docker-compose up -d --build"
+    - curl -s -X POST "https://api.telegram.org/bot$CI_TG_BOT_TOKEN/sendMessage" -d chat_id=$CI_TG_BOT_CHAT_ID -d text="\"yocat2\" $CI_COMMIT_TAG deploy finished."
