fix: axios data field

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: .
     restart: unless-stopped
     volumes:
-      - /yocat2/img_cache:/img_cache
+      - ~/yocat2/img_cache:/img_cache
     depends_on:
       - mongodb
     networks:
