--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "javascript-state-machine": "^3.1.0",
     "megalodon": "^3.6.7",
     "mongoose": "^6.0.12",
-    "parse-domain": "^4.1.0"
+    "parse-domain": "^4.1.0",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
